<resources>
    <string name="app_name">edgers-lottery</string>
    <string name="welcomeMessage">Welcome!</string>
    <string name="login">Login</string>
    <string name="loginMessage">Enter your email and password to log in</string>
    <string name="createAccountMessage">Enter your email to sign up for this app</string>
    <string name="username">Username</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="password">Password</string>
    <string name="emailAddress">email@domain.com</string>
    <string name="phoneNumber">Phone Number (Optional)</string>
    <string name="continueUser">Continue</string>
    <string name="continueOrganizer">Continue as Organizer</string>
    <string name="continueAdmin">Continue as Admin</string>
    <string name="createAccount">Create an account</string>
    <string name="signIn">Sign In</string>
    <string name="register">Register</string>
    <string name="profile">Profile</string>
    <string name="firstLastName">\@FirstName @LastName</string>
    <string name="userName">\@username</string>
    <string name="userID">\@userID</string>
    <string name="notification">Notifications</string>
    <string name="home">Home</string>
    <string name="editProfile">Edit Profile</string>
    <string name="signOut">Sign Out</string>
    <string name="deleteProfile">Delete Profile</string>
    <string name="checkout">Checkout</string>
    <string name="eventLocation">Event Location</string>
    <string name="registerConfirm">Registration Confirmation</string>
    <string name="payment">Payment</string>
    <string name="total">Total</string>
    <string name="activityFeed">Activity</string>
    <string name="qrCode">QR Code</string>
    <string name="scanQRCode">Scan a QR Code</string>
    <string name="myEvents">My Events</string>
    <string name="eventDetails">Event Details</string>
    <string name="joinWaitlist">Join Waitlist</string>
    <string name="leaveWaitlist">Leave Waitlist</string>
    <string name="selectedMessage">You have been selected!</string>
    <string name="acceptInv">Accept Invite</string>
    <string name="declineInv">Decline Invite</string>
    <string name="orgMode">Organizer Mode</string>
    <string name="createEvent">Create Event</string>
    <string name="eventsList">Events List</string>
    <string name="createEditEvent">Create/Edit Event</string>
    <string name="details">Details</string>
    <string name="waitlist">Waitlist</string>
    <string name="entrants">Entrants</string>
    <string name="editEvent">Edit Event</string>
    <string name="addImages">Add Images</string>
    <string name="setRegDeadline">Set registration deadline</string>
    <string name="price">Price</string>
    <string name="geolocationRequired">Geolocation Requirement</string>
    <string name="waitlistLimit">Waitlist Entrants Limit</string>
    <string name="eventTitle">Title</string>
    <string name="eventDescription">Description</string>
    <string name="saveChanges">Save Changes</string>
    <string name="removeEvent">Remove Event</string>
    <string name="popupSaveMessage">Save Changes?</string>
    <string name="popupDeleteMessage">Delete Event?</string>
    <string name="Confirm">CONFIRM</string>
    <string name="runLottery">Run Lottery</string>
    <string name="cancelEvent">Cancel Event</string>
    <string name="genSeeQR">Generate/See QR Code</string>
    <string name="notifyWaitlist">Notify Waitlisters</string>
    <string name="waitlisters">Waitlisters for Event: </string>
    <string name="notifyEntrant">Notify Entrants of Event</string>
    <string name="exportEntrantList">Export Entrants List</string>
    <string name="cancelUser">Cancel User</string>
    <string name="noAction">No Action</string>
    <string name="closeWindow">Close Window</string>
    <string name="adminMode">Admin Mode</string>
    <string name="orgList">Organizer List</string>
    <string name="imagesView">Images View</string>
    <string name="userList">User List</string>
    <string name="exportNotif">Export Notifications</string>
    <string name="userProfiles">User Profiles</string>
    <string name="deleteOrganizer">Delete Organizer</string>
    <string name="imageList">Image List</string>
    <string name="popupImageMessage">Uploaded by: </string>
    <string name="deleteImage">Delete Image</string>
    <string name="popupExportMessage">All notifications made exported</string>
    <string name="export">Export</string>
    <string name="backButton">Back</string>
    <string name="aboutMe">About Me:</string>
    <string name="contactInfo">Contact Information</string>
    <string name="description">Description</string>
    <string name="profileEmail">Email: </string>
    <string name="profilePhone">Phone: </string>
    <string name="registerOrg">Register as Organizer</string>
    <string name="log_in_as_existing_user">Log In As Existing User</string>
    <string name="location">Location:</string>


</resources>