<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="25sp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:padding="24dp"
            />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="25sp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/loginMessage"
            android:textSize="18sp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:fontFamily="@font/inter"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="432dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailTextField"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="32dp"
            android:layout_marginVertical="5dp"
            android:hint="@string/emailAddress">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordTextField"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="32dp"
            android:layout_marginVertical="5dp"
            android:hint="@string/password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/continueUserButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="7dp"
            android:layout_marginHorizontal="32dp"
            android:backgroundTint="@color/black"
            android:fontFamily="@font/inter_semibold"
            android:text="@string/continueUser"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/continueOrgButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="7dp"
            android:layout_marginHorizontal="32dp"
            android:backgroundTint="@color/loginGray"
            android:fontFamily="@font/inter_semibold"
            android:text="@string/continueOrganizer"
            android:textAllCaps="false"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/continueAdminButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="7dp"
            android:layout_marginHorizontal="32dp"
            android:text="@string/continueAdmin"
            android:textColor="@color/black"
            android:backgroundTint="@color/loginGray"
            android:fontFamily="@font/inter_semibold"
            android:textAllCaps="false"  />

        <Button
            android:id="@+id/createAccountButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="7dp"
            android:layout_marginHorizontal="32dp"
            android:text="@string/createAccount"
            android:textColor="@color/black"
            android:backgroundTint="@color/loginGray"
            android:fontFamily="@font/inter_semibold"
            android:textAllCaps="false" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>