<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F2ECFF"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="vertical"
        android:background="#DBC5FF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="vertical"
        android:background="#DBC5FF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

        <TextView
            android:id="@+id/ProfileTab"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_gravity="center"
            android:text="@string/profile"
            android:textAlignment="center"
            android:textColor="#4B0082"
            android:textSize="24sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5">

        <ImageView
            android:id="@+id/profileImageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/profile"
            android:padding="10dp"
            app:srcCompat="@drawable/default_avatar" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout7"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:orientation="vertical"
        android:layout_margin="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout6">

        <TextView
            android:id="@+id/ProfileNames"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/firstLastName"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/Username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/userName"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/ProfileEditButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="120dp"
            android:backgroundTint="@color/black"
            android:fontFamily="@font/inter_semibold"
            android:text="@string/editProfile"
            android:textAllCaps="false"
            app:icon="@drawable/edit_icon" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="57dp"
        android:layout_height="50dp"
        android:layout_marginTop="1dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4">


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout8"
        android:layout_width="350dp"
        android:layout_height="190dp"
        android:layout_margin="5dp"
        android:background="@drawable/textbox_shape"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout7">


        <TextView
            android:id="@+id/aboutMeText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/aboutMe"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/descriptionText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/contactInfoText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contactInfo"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/ProfileEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profileEmail"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/ProfilePhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profilePhone"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="15sp" />
        <TextView
            android:id="@+id/ProfileLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/location"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="15sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout10"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/action_bar">

        <Button
            android:id="@+id/signoutButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_weight="1"
            android:backgroundTint="@color/red"
            android:fontFamily="@font/inter_semibold"
            android:text="@string/signOut"
            android:textAllCaps="false"
            android:textColor="@color/black"
            app:icon="@drawable/signout" />

        <Button
            android:id="@+id/deleteProfileButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_weight="0.5"
            android:backgroundTint="@color/red"
            android:fontFamily="@font/inter_semibold"
            android:text="@string/deleteProfile"
            android:textAllCaps="false"
            android:textColor="@color/black"
            app:icon="@drawable/trash" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/action_bar"
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <ImageButton
            android:id="@+id/HomeButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:backgroundTint="#F2ECFF"
            android:contentDescription="@string/home"
            app:srcCompat="@drawable/home" />

        <ImageButton
            android:id="@+id/qrButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:backgroundTint="#F2ECFF"
            android:contentDescription="@string/qrCode"
            app:srcCompat="@drawable/camera" />

        <ImageButton
            android:id="@+id/ProfileButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:backgroundTint="#F2ECFF"
            android:contentDescription="@string/profile"
            app:srcCompat="@drawable/profile_selected" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/uploadImageButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout6"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout6"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/linearLayout6"
        app:layout_constraintTop_toTopOf="@+id/linearLayout6"
        app:layout_constraintVertical_bias="1.0"
        android:backgroundTint="#F2ECFF"
        app:srcCompat="@drawable/edit_icon" />

</androidx.constraintlayout.widget.ConstraintLayout>